--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -19,7 +19,9 @@
     @media only screen and (min-width : 650px) {
       margin-bottom: 37px;
     }
+
     ul.footer-nav{
+      list-style: none;
       li{
         margin-right: 10px;
         font-size: 16px;
