--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,98 +1,187 @@
-nav{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: relative;
-  margin-top: 8px;
-  @media only screen and (min-width : 400px) {
-    margin-top: 30px;
-
-  }
-  // outline: 2px solid black;
-
-  h1.brand{
-    // margin-top: 1rem;
-    // width: 60%;
-    margin-bottom: 3px;
-    @media only screen and (min-width : 400px) {
-        width: 100%;
-    }
-    a{
-      font-weight: bold;
-
-
-      font-size: 16px;
-      color: #415169;
-
-      @media only screen and (min-width : 800px) {
-        font-size: 32px;
-      }
-
-      @media only screen and (min-width : 600px) {
-        font-size: 28px;
-      }
-    }
-
-
-
-
-  }
-
-  svg{
-    position: relative;
-  }
-
-  .bars:hover{
-    cursor: pointer;
-  }
-
-  li{
-    list-style: none;
-    margin-bottom: 0;
-  }
-
-  ul.mobile-nav{
-    z-index: 2;
-    margin-bottom: 0;
+.nav-anchor{
+  nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     position: absolute;
-    background-color: white;
-    border-radius: 3px;
-    width: 300px;
-    margin: 0 auto;
-    text-align: center;
-    color: black;
-    top: 40px;
-    right: 1.5%;
-    font-size: 18px;
+    z-index: 1;
+    width: 88%;
+    margin-left: -45vw;
+    // margin-right: auto;
+    margin-top: 16px;
+    left:50%;
+
+    // margin-bottom: 15px;
+    @media only screen and (min-width : 400px) {
+      margin-left: -43vw;
+      // margin-top: 30px;
+    }
+    // outline: 2px solid black;
+
+    h1.brand{
+      // margin-top: 1rem;
+      // width: 60%;
+      margin-bottom: 3px;
+      // @media only screen and (min-width : 400px) {
+      //     width: 100%;
+      // }
+      a{
+        font-weight: bold;
+        font-size: 16px;
+        color: #415169;
+
+        @media only screen and (min-width : 800px) {
+          font-size: 32px;
+        }
+
+        @media only screen and (min-width : 600px) and (max-width : 800px) {
+          font-size: 28px;
+        }
+      }
+    }
+
+    svg{
+      position: relative;
+    }
+
+    .bars:hover{
+      cursor: pointer;
+    }
 
     li{
-      padding: 1rem;
-      border-bottom: 2px solid black;
-      // font-weight: bold;
-      &:last-child{
-        border-bottom: none;
+      list-style: none;
+      margin-bottom: 0;
+    }
+
+    ul.mobile-nav{
+      z-index: 2;
+      margin-bottom: 0;
+      position: absolute;
+      background-color: white;
+      border: 1px solid black;
+      border-radius: 3px;
+      width: 300px;
+      margin: 0 auto;
+      text-align: center;
+      color: black;
+      top: 40px;
+      right: -4%;
+      font-size: 18px;
+
+      @media only screen and (min-width : 400px) {
+        right: 0%;
+      }
+
+      li{
+        padding: 1rem;
+        border-bottom: 2px solid black;
+        // font-weight: bold;
+        &:last-child{
+          border-bottom: none;
+        }
+      }
+
+
+
+      li.practice-areas-li{
+        position: relative;
+        cursor: pointer;
+        ul.practice-areas-dropdown{
+          cursor: default;
+          text-align: center;
+          z-index: 1;
+          background-color: white;
+          border-radius: 5px;
+          margin-top: 1rem;
+
+          li{
+            display: block;
+            border-bottom: none;
+            padding: 0.5rem;
+            font-size: 16px;
+            list-style: circle;
+
+            &:last-child{
+              border-bottom: none;
+            }
+          }
+        }
+      }
+      .down {
+        top: 46%;
       }
     }
 
+    ul.mobile-nav-expanded{
+      .down {
+        top: 9.5%;
+      }
 
+    }
 
-    li.practice-areas-li{
-      position: relative;
-      cursor: pointer;
-      ul.practice-areas-dropdown{
-        cursor: default;
+    .down {
+      width: 0;
+      height: 0;
+      border-left: 5px solid transparent;
+      border-right: 5px solid transparent;
+      border-top: 5px solid black;
+      display: inline-block;
+      margin-left: 2px;
+      position: absolute;
+
+    }
+
+    ul.desktop-nav{
+      margin-bottom: 0;
+      display: flex;
+
+      li{
+        // font-weight: bold;
+        display: inline;
+        // margin-right: 30px;
+        font-size: 16px;
         text-align: center;
+        padding: 0 1rem;
+        @media only screen and (min-width : 1200px) {
+          padding: 0 1.5rem;
+        }
+      }
+
+      li.practice-areas{
+        position: relative;
+        margin-top: 0;
+        // margin-right: 16px;
+      }
+
+      li.practice-areas:hover{
+        cursor: pointer;
+        text-decoration: underline;
+        ul.practice-areas-dropdown{
+          cursor: default;
+        }
+      }
+
+      .down {
+        top: 40%;
+      }
+
+      ul.practice-areas-dropdown{
+        position: absolute;
         z-index: 1;
         background-color: white;
         border-radius: 5px;
-        margin-top: 1rem;
-
+        top: 30px;
+        left: -25;
+        width: 323px;
+        @media only screen and (min-width : 1200px) {
+          width: 358px;
+        }
         li{
           display: block;
-          border-bottom: none;
-          padding: 0.5rem;
-          font-size: 16px;
-          list-style: circle;
+          text-align: left;
+
+          border-bottom: 2px solid black;
+          padding: 1rem;
 
           &:last-child{
             border-bottom: none;
@@ -100,211 +189,93 @@ nav{
         }
       }
     }
-    .down {
-      top: 46%;
-    }
   }
 
-  ul.mobile-nav-expanded{
-    .down {
-      top: 9.5%;
-    }
 
-  }
+  .hero{
+    width: 100%;
+    background-position: center center;
+    background-repeat: none;
+    background-size: cover;
+    // display: flex;
 
-  .down {
-    width: 0;
-    height: 0;
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
-    border-top: 5px solid black;
-    display: inline-block;
-    margin-left: 2px;
-    position: absolute;
 
-  }
-
-  ul.desktop-nav{
-    margin-bottom: 0;
-    display: flex;
-
-    li{
-      // font-weight: bold;
-      display: inline;
-      // margin-right: 30px;
-      font-size: 16px;
+    .hero-content{
+      // padding-left: 5%;
       text-align: center;
-      padding: 0 1rem;
-    }
+      margin-top: 10%;
+      h1.tag-line{
+        font-weight: bold;
+        font-size: 22px;
+        color: #415169;
 
-    li.practice-areas{
-      position: relative;
-      margin-top: 0;
-      // margin-right: 16px;
-    }
+        margin-top: 20%;
 
-    li.practice-areas:hover{
-      cursor: pointer;
-      text-decoration: underline;
-      ul.practice-areas-dropdown{
-        cursor: default;
+
+        @media only screen and (min-width : 400px) and (max-width : 450px) {
+          font-size: 30px;
+          margin-top: 23%;
+        }
+
+        @media only screen and (min-width : 450px) and (max-width : 600px) {
+          font-size: 34px;
+          margin-top: 23%;
+        }
+
+        @media only screen and (min-width : 600px) and (max-width : 1000px) {
+          font-size: 42px;
+          margin-top: 23%;
+        }
+
+        @media only screen and (min-width : 1000px) and (max-width : 1200px) {
+          font-size: 72px;
+        }
+
+
+        @media only screen and (min-width : 1200px) {
+          font-size: 86px;
+          margin-top: 15%;
+          margin-bottom: 10px;
+        }
       }
-    }
+      p.sub-tag-line{
+        // max-width: 60%;
+        // margin-left: 0;
+        font-family: 'QuattrocentoSans', sans-serif;
+        font-weight: bold;
+        font-size: 22px;
+        margin-bottom: 40%;
+        color: #6fa2c8;
 
-    // i {
-    //   border: solid black;
-    //   border-width: 0 3px 3px 0;
-    //   display: inline-block;
-    //   padding: 3px;
-    // }
+        @media only screen and (min-width : 400px) and (max-width : 450px) {
+          font-size: 26px;
+          margin-bottom: 44%;
+          // margin-top: 14%;
+        }
 
-    .down {
-      top: 40%;
-    }
+        @media only screen and (min-width : 450px) and (max-width : 600px) {
+          font-size: 32px;
+          margin-bottom: 42%;
+          // margin-top: 14%;
+        }
 
-    ul.practice-areas-dropdown{
-      position: absolute;
-      z-index: 1;
-      background-color: white;
-      border-radius: 5px;
-      top: 30px;
-      left: -25;
-      width: 323px;
-      li{
-        display: block;
-        text-align: left;
+        @media only screen and (min-width : 600px) and (max-width : 1000px) {
+          font-size: 40px;
+          margin-bottom: 36%;
+          // margin-top: 14%;
+        }
 
-        border-bottom: 2px solid black;
-        padding: 1rem;
+        @media only screen and (min-width : 1000px) and (max-width : 1200px) {
+          font-size: 40px;
+          margin-bottom: 40%;
+          // margin-top: 14%;
+        }
 
-        &:last-child{
-          border-bottom: none;
+        @media only screen and (min-width : 1200px)  {
+          font-size: 46px;
+          margin-bottom: 31%;
         }
       }
     }
   }
 }
-
-
-.hero{
-  width: 100%;
-  background-position: center center;
-  background-repeat: none;
-  background-size: cover;
-  // display: flex;
-
-
-  .hero-content{
-    // padding-left: 5%;
-    text-align: center;
-    margin-top: 10%;
-    h1.tag-line{
-      font-weight: bold;
-      font-size: 22px;
-      color: #415169;
-
-      margin-top: 10%;
-
-
-      @media only screen and (min-width : 400px) and (max-width : 450px) {
-        font-size: 30px;
-        margin-top: 14%;
-      }
-
-      @media only screen and (min-width : 450px) and (max-width : 600px) {
-        font-size: 34px;
-        margin-top: 14%;
-      }
-
-      @media only screen and (min-width : 600px) and (max-width : 1000px) {
-        font-size: 42px;
-        margin-top: 14%;
-      }
-
-      @media only screen and (min-width : 1000px) and (max-width : 1200px) {
-        font-size: 72px;
-      }
-
-
-      @media only screen and (min-width : 1200px) {
-        font-size: 86px;
-        margin-top: 14%;
-        margin-bottom: 10px;
-      }
-    }
-    p.sub-tag-line{
-      // max-width: 60%;
-      // margin-left: 0;
-      font-family: 'QuattrocentoSans', sans-serif;
-      font-weight: bold;
-      font-size: 22px;
-      margin-bottom: 40%;
-      color: #6fa2c8;
-
-      @media only screen and (min-width : 400px) and (max-width : 450px) {
-        font-size: 26px;
-        margin-bottom: 44%;
-        // margin-top: 14%;
-      }
-
-      @media only screen and (min-width : 450px) and (max-width : 600px) {
-        font-size: 34px;
-        margin-bottom: 42%;
-        // margin-top: 14%;
-      }
-
-      @media only screen and (min-width : 600px) and (max-width : 1000px) {
-        font-size: 40px;
-        margin-bottom: 36%;
-        // margin-top: 14%;
-      }
-
-      @media only screen and (min-width : 1000px) and (max-width : 1200px) {
-        font-size: 40px;
-        margin-bottom: 40%;
-        // margin-top: 14%;
-      }
-
-      @media only screen and (min-width : 1200px)  {
-        font-size: 46px;
-        margin-bottom: 36%;
-      }
-    }
-  }
-}
-
-// .slideshow{
-//   width: 100%;
-//   background-position: top center;
-//   background-repeat: none;
-//   background-size: cover;
-//   -webkit-animation-duration: 8s;
-//   animation-duration: 8s;
-//   -webkit-animation-fill-mode: both;
-//   animation-fill-mode: both;
-//
-//
-//
-//   h1{
-//     margin-bottom: 30vh;
-//   }
-// }
-
-// @-webkit-keyframes fade {
-//    0% {opacity: 0;}
-//    10% {opacity: 1;}
-//    80% {opacity: 1;}
-//    100% {opacity: 0;}
-// }
-//
-// @keyframes fade {
-//   0% {opacity: 0;}
-//   10% {opacity: 1;}
-//   80% {opacity: 1;}
-//   100% {opacity: 0;}
-// }
-//
-// .fade {
-//    -webkit-animation-name: fade;
-//    animation-name: fade;
-// }
