--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -3,7 +3,7 @@
   background-image: linear-gradient(to top, #7589a3, #415169);
   padding: 20px 0 20px;
 
-  @media only screen and (min-width : 600px) { 
+  @media only screen and (min-width : 600px) {
      padding: 120px 0 120px;
   }
 
@@ -13,11 +13,12 @@
   }
 
   h1.header{
-    font-size: 42px;
+    font-size: 34px;
     margin-bottom: 20px;
     color: white;
 
     @media only screen and (min-width : 500px) {
+      font-size: 42px;
       margin-bottom: 35px;
     }
   }
@@ -78,9 +79,10 @@
         margin: 10px 0;
 
       }
-      .email{
-
+      a.email{
+        color: white;
       }
+
       .disclaimer{
         margin-top: 30px;
         font-size: 14px;
