--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -279,3 +279,34 @@
     }
   }
 }
+
+.nav-anchor{
+  .hero{
+    .hero-content.dui{
+      h1.tag-line{
+        font-size: 34px;
+      }
+    }
+    .hero-content.felony{
+      h1.tag-line{
+        font-size: 34px;
+      }
+    }
+    .hero-content.juvenile{
+      h1.tag-line{
+        font-size: 34px;
+      }
+    }
+    .hero-content.municipal{
+      h1.tag-line{
+        font-size: 34px;
+      }
+    }
+    .hero-content.domestic{
+      h1.tag-line{
+        font-size: 34px;
+      }
+    }
+
+  }
+}
