--- a/src/styles/attorneyProfile.scss
+++ b/src/styles/attorneyProfile.scss
@@ -5,7 +5,6 @@
   @media only screen and (min-width : 650px) {
     padding-top: 120px;
     padding-bottom: 120px;
-
   }
 
   h1.header{
@@ -27,6 +26,14 @@
       min-height: 300px;
       min-width: 290px;
       flex:1;
+
+      picture{
+        img{
+            object-position: right center !important;
+        }
+      }
+
+
 
       @media only screen and (min-width : 760px) {
         min-width: 417px;
