--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -20,25 +20,54 @@
 
     h1.brand{
       margin-bottom: 3px;
+      font-size: 16px;
 
-      @media only screen and (min-width : 800px) {
-        font-size: 32px;
+      // @media only screen and (min-width : 800px) {
+      //   font-size: 32px;
+      // }
+
+      @media only screen and (min-width : 400px) and (max-width : 450px) {
+        font-size: 20px;
       }
 
-      @media only screen and (min-width : 600px) and (max-width : 800px) {
+      @media only screen and (min-width : 450px) and (max-width : 600px) {
+        font-size: 24px;
+      }
+
+      @media only screen and (min-width : 600px) and (max-width : 1000px) {
         font-size: 28px;
+      }
+
+      @media only screen and (min-width : 1000px) and (max-width : 1200px) {
+        font-size: 28px;
+      }
+
+      @media only screen and (min-width : 1200px)  {
+        font-size: 32px;
       }
       a{
         font-weight: bold;
         font-size: 16px;
         color: #415169;
 
-        @media only screen and (min-width : 800px) {
-          font-size: 32px;
+        @media only screen and (min-width : 400px) and (max-width : 450px) {
+          font-size: 20px;
         }
 
-        @media only screen and (min-width : 600px) and (max-width : 800px) {
+        @media only screen and (min-width : 450px) and (max-width : 600px) {
+          font-size: 24px;
+        }
+
+        @media only screen and (min-width : 600px) and (max-width : 1000px) {
           font-size: 28px;
+        }
+
+        @media only screen and (min-width : 1000px) and (max-width : 1200px) {
+          font-size: 28px;
+        }
+
+        @media only screen and (min-width : 1200px)  {
+          font-size: 32px;
         }
       }
     }
