--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -22,10 +22,6 @@ p, address, div, li {
   font-family: 'Quattrocento Sans', sans-serif;
 }
 
-// p{ 
-//   margin: 0;
-// }
-
 a{
   color: black;
   text-decoration: none;
@@ -38,25 +34,6 @@ a:hover{
 .nav-anchor{
   position: relative;
 }
-
-// .overlay {
-//   position: relative;
-// }
-
-// .overlay:before{
-//   position: absolute !important;
-//   content:" " !important;
-//   top:0 !important;
-//   left:0 !important;
-//   opacity: 0.4 !important;
-//   width:100% !important;
-//   height:100% !important;
-//   // display: none;
-//   background-image: linear-gradient(to bottom, #a8cfe6, #6fa2c8) !important;
-// }
-
-
-
 
 .container {
   padding-right: 15px;
@@ -143,7 +120,6 @@ a:hover{
     }
   }
 
-
   .phone{
     &::before{
       content: 'Phone: ';
@@ -152,25 +128,26 @@ a:hover{
   }
 }
 
-
 .content-footer{
   color: black;
-  // text-decoration: underline;
   text-transform: capitalize;
   font-family: 'Work Sans';
   font-weight: bold;
   position: relative;
   margin-top: 21px;
-  // display: inline-block;
 
   &::after{
     content: '';
     border-bottom: 6px solid black;
-
-
     width: 100%;
     position: absolute;
     top: 25px;
     left: 0;
+  }
+}
+
+.content-footer:hover{
+  &:after{
+    border-bottom: 6px solid rgba(0, 0, 0, 0.75);
   }
 }
