--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -66,8 +66,6 @@
       }
 
       .content-footer.meet-patrick{
-
-
         font-size: 18px;
         text-align: center;
         position: relative;
@@ -87,6 +85,9 @@
             margin-left: 0px;
           }
         }
+      }
+      a:hover{
+        text-decoration: none;
       }
     }
 
