--- a/src/styles/attorneyProfile.scss
+++ b/src/styles/attorneyProfile.scss
@@ -36,8 +36,8 @@
 
 
       @media only screen and (min-width : 760px) {
-        min-width: 417px;
-        max-height: 481px;
+        min-width: 450px;
+        // max-height: 600px;
       }
     }
 
@@ -62,7 +62,7 @@
       }
 
       @media only screen and (min-width : 760px) {
-        min-width: 400px;
+        min-width: 500px;
         text-align: left;
         padding-right:42px;
         flex: 3;
