--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,700&display=swap');
 
 html {
- scroll-behavior: smooth;
+ // scroll-behavior: smooth;
 
  // @media (prefers-reduced-motion: reduce) {
  //    html {
