--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -8,7 +8,7 @@
 
   @media only screen and (min-width : 650px) {
     padding-top: 65px;
-    padding-bottom: 45px;   
+    padding-bottom: 45px;
   }
   .rating.gatsby-image-wrapper{
     margin: 0 auto;
@@ -66,6 +66,8 @@
   .title{
     font-size: 32px;
     color: #6fa2c8;
+    font-weight: bold;
+    font-family: 'Work Sans';
     // line-height: 42px;
     margin-bottom: 15px;
     @media only screen and (min-width : 500px) {
