--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,37 +1,44 @@
-@import url('https://fonts.googleapis.com/css?family=Work+Sans:400,700&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Quattrocento+Sans:400,400i,700&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Work+Sans:400,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Quattrocento+Sans:400,400i,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,700&display=swap");
 
 html {
- // scroll-behavior: smooth;
-
- // @media (prefers-reduced-motion: reduce) {
- //    html {
- //      scroll-behavior: auto;
- //    }
- //  }
+  scroll-behavior: smooth;
 }
 
-* { margin:0; padding:0; box-sizing:border-box; }
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Work Sans', sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-p, address, div, li {
-  font-family: 'Quattrocento Sans', sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Work Sans", sans-serif;
+  font-weight: 700;
 }
 
-a{
+p,
+address,
+div,
+li {
+  font-family: "Quattrocento Sans", sans-serif;
+}
+
+a {
   color: black;
   text-decoration: none;
 }
 
-a:hover{
+a:hover {
   text-decoration: underline;
 }
 
-.nav-anchor{
+.nav-anchor {
   position: relative;
 }
 
@@ -101,45 +108,43 @@ a:hover{
   }
 }
 
-
-
-.placeholder{
-  a{
+.placeholder {
+  a {
     margin: 0;
   }
-  h4{
-      margin: 0;
+  h4 {
+    margin: 0;
   }
 
-  .email{
+  .email {
     text-decoration: none;
     color: black;
     font-size: 1rem;
 
-    &::before{
-      content: 'Email: ';
+    &::before {
+      content: "Email: ";
       font-weight: bold;
     }
   }
 
-  .phone{
-    &::before{
-      content: 'Phone: ';
+  .phone {
+    &::before {
+      content: "Phone: ";
       font-weight: bold;
     }
   }
 }
 
-.content-footer{
+.content-footer {
   color: black;
   text-transform: capitalize;
-  font-family: 'Work Sans';
+  font-family: "Work Sans";
   font-weight: bold;
   position: relative;
   margin-top: 21px;
 
-  &::after{
-    content: '';
+  &::after {
+    content: "";
     border-bottom: 6px solid black;
     width: 100%;
     position: absolute;
@@ -148,8 +153,8 @@ a:hover{
   }
 }
 
-.content-footer:hover{
-  &:after{
+.content-footer:hover {
+  &:after {
     border-bottom: 6px solid rgba(0, 0, 0, 0.75);
   }
 }
