--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,403 +1,302 @@
-.nav-anchor{
-  nav{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+@import "./variables.scss";
+
+.container {
+  max-width: 1300px;
+  @include variableBPUp(1200px) {
+    width: 1300px;
+  }
+  position: relative;
+  nav {
     position: absolute;
     z-index: 1;
-    width: 88%;
-    margin-left: -45vw;
-    // margin-right: auto;
-    margin-top: 16px;
-    left:50%;
+    width: 100%;
+    top: 16px;
 
-    // margin-bottom: 15px;
-    @media only screen and (min-width : 400px) {
-      margin-left: -43vw;
-      // margin-top: 30px;
-    }
-    // outline: 2px solid black;
-
-    .brand{
+    .brand {
       margin-bottom: 3px;
       font-size: 16px;
+      color: $navy;
 
-      // @media only screen and (min-width : 800px) {
-      //   font-size: 32px;
-      // }
-
-      @media only screen and (min-width : 400px) and (max-width : 450px) {
+      @media only screen and (min-width: 400px) and (max-width: 450px) {
         font-size: 20px;
       }
 
-      @media only screen and (min-width : 450px) and (max-width : 600px) {
+      @media only screen and (min-width: 450px) and (max-width: 600px) {
         font-size: 24px;
       }
 
-      @media only screen and (min-width : 600px) and (max-width : 1000px) {
+      @media only screen and (min-width: 600px) and (max-width: 1000px) {
         font-size: 28px;
       }
 
-      @media only screen and (min-width : 1000px) and (max-width : 1200px) {
+      @media only screen and (min-width: 1000px) and (max-width: 1200px) {
         font-size: 28px;
       }
 
-      @media only screen and (min-width : 1200px)  {
+      @media only screen and (min-width: 1200px) {
         font-size: 32px;
       }
-      a{
+      a {
         font-weight: bold;
         font-size: 16px;
         color: #415169;
 
-        @media only screen and (min-width : 400px) and (max-width : 450px) {
+        @media only screen and (min-width: 400px) and (max-width: 450px) {
           font-size: 20px;
         }
 
-        @media only screen and (min-width : 450px) and (max-width : 600px) {
+        @media only screen and (min-width: 450px) and (max-width: 600px) {
           font-size: 24px;
         }
 
-        @media only screen and (min-width : 600px) and (max-width : 1000px) {
+        @media only screen and (min-width: 600px) and (max-width: 1000px) {
           font-size: 28px;
         }
 
-        @media only screen and (min-width : 1000px) and (max-width : 1200px) {
+        @media only screen and (min-width: 1000px) and (max-width: 1200px) {
           font-size: 28px;
         }
 
-        @media only screen and (min-width : 1200px)  {
+        @media only screen and (min-width: 1200px) {
           font-size: 32px;
         }
       }
     }
 
-    svg{
-      position: relative;
-    }
-
-    .bars:hover{
-      cursor: pointer;
-    }
-
-    li{
-      list-style: none;
-      margin-bottom: 0;
-    }
-
-    ul.mobile-nav{
-      z-index: 2;
-      margin-bottom: 0;
+    button.navbar-toggler {
+      border-radius: 0;
+      padding: 0;
       position: absolute;
-      background-color: white;
-      border: 1px solid black;
-      border-radius: 3px;
-      width: 300px;
-      margin: 0 auto;
-      text-align: center;
-      color: black;
-      top: 40px;
-      right: -4%;
-      font-size: 18px;
-
-      @media only screen and (min-width : 400px) {
-        right: 0%;
+      right: 25px;
+      top: 10px;
+      border: 0px solid black;
+      .navbar-toggler-icon {
+        width: 32px;
+        height: 32px;
+        border: 0px;
       }
+    }
 
-      li{
-        padding: 1rem;
-        border-bottom: 1px solid black;
-        // font-weight: bold;
-        &:last-child{
-          border-bottom: none;
-        }
-      }
+    button.navbar-toggler.collapsed {
+      border-radius: 0;
+      padding: 0;
+    }
 
+    .nav-items {
+      margin-bottom: 0;
+      justify-content: flex-end;
 
-
-      li.practice-areas-li{
-        position: relative;
-        cursor: pointer;
-        ul.practice-areas-dropdown{
-          cursor: default;
-          text-align: center;
-          z-index: 1;
-          background-color: white;
-          border-radius: 5px;
-          margin-top: 1rem;
-
-          li{
-            display: block;
-            border-bottom: none;
-            padding: 0.5rem;
-            font-size: 16px;
-            list-style: circle;
-
-            &:last-child{
-              border-bottom: none;
+      &.show,
+      &.collapsing {
+        background-color: white;
+        border-radius: 4px;
+        .navbar-nav {
+          a.nav-link {
+            @include mobile {
+              display: block;
+              padding: 10px 0 10px 20px;
+            }
+            @include tablet {
+              display: block;
+              padding: 10px 0 10px 20px;
             }
           }
         }
-      }
-      .down {
-        top: 46%;
-      }
-    }
 
-    ul.mobile-nav-expanded{
-      .down {
-        top: 9.5%;
-      }
+        .dropdown-menu.show {
+          // background-color: white;
+          border: 0;
+          padding-left: 10px;
 
-    }
-
-    .down {
-      width: 0;
-      height: 0;
-      border-left: 5px solid transparent;
-      border-right: 5px solid transparent;
-      border-top: 5px solid black;
-      display: inline-block;
-      margin-left: 2px;
-      position: absolute;
-
-    }
-
-    ul.desktop-nav{
-      margin-bottom: 0;
-      display: flex;
-
-      li{
-        // font-weight: bold;
-        display: inline;
-        // margin-right: 30px;
-        font-size: 16px;
-        text-align: center;
-        padding: 0 1rem;
-        @media only screen and (min-width : 1200px) {
-          padding: 0 1.5rem;
-        }
-      }
-
-      li.practice-areas{
-        position: relative;
-        margin-top: 0;
-        // margin-right: 16px;
-      }
-
-      li.practice-areas:hover{
-        cursor: pointer;
-        text-decoration: underline;
-        ul.practice-areas-dropdown{
-          cursor: default;
-        }
-      }
-
-      .down {
-        top: 40%;
-      }
-
-      ul.practice-areas-dropdown{
-        position: absolute;
-        z-index: 1;
-        background-color: white;
-        border-radius: 5px;
-        top: 30px;
-        left: -25;
-        width: 323px;
-        @media only screen and (min-width : 1200px) {
-          width: 358px;
-        }
-        li{
-          display: block;
-          text-align: left;
-
-          border-bottom: 2px solid black;
-          padding: 1rem;
-
-          &:last-child{
-            border-bottom: none;
+          a.dropdown-item {
+            padding: 10px 0 10px 30px;
           }
         }
       }
-    }
-  }
 
-  .hero{
-    width: 100%;
-    background-position: center center;
-    background-repeat: none;
-    background-size: cover;
-
-    .hero-content{
-      text-align: center;
-      margin-top: 10%;
-      .tag-line{
-        font-weight: bold;
-        font-size: 38px;
-        color: #415169;
-        margin-top: 20%;
-
-        @media only screen and (min-width : 400px) and (max-width : 450px) {
-          font-size: 50px;
-          margin-top: 23%;
-        }
-
-        @media only screen and (min-width : 450px) and (max-width : 600px) {
-          font-size: 54px;
-          margin-top: 23%;
-        }
-
-        @media only screen and (min-width : 600px) and (max-width : 1000px) {
-          font-size: 62px;
-          margin-top: 23%;
-        }
-
-        @media only screen and (min-width : 1000px) and (max-width : 1200px) {
-          font-size: 72px;
-        }
-
-        @media only screen and (min-width : 1200px) {
-          font-size: 86px;
-          margin-top: 15%;
-          margin-bottom: 10px;
-        }
-      }
-      .sub-tag-line{
-        font-family: 'QuattrocentoSans', sans-serif;
-        font-weight: bold;
-        font-size: 22px;
-        margin-bottom: 60%;
-        color: #6fa2c8;
-
-        @media only screen and (min-width : 400px) and (max-width : 450px) {
-          font-size: 26px;
-          margin-bottom: 58%;
-        }
-
-        @media only screen and (min-width : 450px) and (max-width : 600px) {
-          font-size: 32px;
-          margin-bottom: 55%;
-        }
-
-        @media only screen and (min-width : 600px) and (max-width : 1000px) {
-          font-size: 40px;
-          margin-bottom: 51%;
-        }
-
-        @media only screen and (min-width : 1000px) and (max-width : 1200px) {
-          font-size: 40px;
-          margin-bottom: 40%;
-        }
-
-        @media only screen and (min-width : 1200px)  {
-          font-size: 46px;
-          margin-bottom: 31%;
+      .navbar-nav {
+        a.nav-link {
+          color: black;
+          opacity: 0.9;
+          padding: 0 1rem;
         }
       }
     }
   }
 }
 
-.nav-anchor{
-  .hero{
-    .hero-content.dui{
-      .tag-line{
-        font-size: 40px;
-        @media only screen and (min-width : 450px) and (max-width : 600px) {
-          font-size: 46px;
-        }
-        @media only screen and (min-width : 600px) and (max-width : 1000px) {
-          font-size: 62px;
-        }
+.hero {
+  width: 100%;
+  background-position: center center;
+  background-repeat: none;
+  background-size: cover;
 
-        @media only screen and (min-width : 1000px) and (max-width : 1200px) {
-          font-size: 72px;
-        }
+  .hero-content {
+    text-align: center;
+    margin-top: 10%;
+    .tag-line {
+      font-weight: bold;
+      font-size: 38px;
+      color: #415169;
+      margin-top: 20%;
 
-        @media only screen and (min-width : 1200px) {
-          font-size: 86px;
-        }
+      @media only screen and (min-width: 400px) and (max-width: 450px) {
+        font-size: 50px;
+        margin-top: 23%;
+      }
+
+      @media only screen and (min-width: 450px) and (max-width: 600px) {
+        font-size: 54px;
+        margin-top: 23%;
+      }
+
+      @media only screen and (min-width: 600px) and (max-width: 1000px) {
+        font-size: 62px;
+        margin-top: 23%;
+      }
+
+      @media only screen and (min-width: 1000px) and (max-width: 1200px) {
+        font-size: 72px;
+      }
+
+      @media only screen and (min-width: 1200px) {
+        font-size: 86px;
+        margin-top: 15%;
+        margin-bottom: 10px;
       }
     }
+    .sub-tag-line {
+      font-family: "QuattrocentoSans", sans-serif;
+      font-weight: bold;
+      font-size: 22px;
+      margin-bottom: 60%;
+      color: #6fa2c8;
 
-    .hero-content.felony{
-      .tag-line{
+      @media only screen and (min-width: 400px) and (max-width: 450px) {
+        font-size: 26px;
+        margin-bottom: 58%;
+      }
+
+      @media only screen and (min-width: 450px) and (max-width: 600px) {
+        font-size: 32px;
+        margin-bottom: 55%;
+      }
+
+      @media only screen and (min-width: 600px) and (max-width: 1000px) {
         font-size: 40px;
-        @media only screen and (min-width : 450px) and (max-width : 600px) {
-          font-size: 46px;
-        }
-        @media only screen and (min-width : 600px) and (max-width : 1000px) {
-          font-size: 62px;
-        }
+        margin-bottom: 51%;
+      }
 
-        @media only screen and (min-width : 1000px) and (max-width : 1200px) {
-          font-size: 72px;
-        }
+      @media only screen and (min-width: 1000px) and (max-width: 1200px) {
+        font-size: 40px;
+        margin-bottom: 40%;
+      }
 
-        @media only screen and (min-width : 1200px) {
-          font-size: 86px;
-        }
+      @media only screen and (min-width: 1200px) {
+        font-size: 46px;
+        margin-bottom: 31%;
       }
     }
+  }
+}
 
-    .hero-content.juvenile{
-      .tag-line{
-        font-size: 40px;
-        @media only screen and (min-width : 450px) and (max-width : 600px) {
-          font-size: 46px;
-        }
-        @media only screen and (min-width : 600px) and (max-width : 1000px) {
-          font-size: 62px;
-        }
+.hero {
+  .hero-content.dui {
+    .tag-line {
+      font-size: 40px;
+      @media only screen and (min-width: 450px) and (max-width: 600px) {
+        font-size: 46px;
+      }
+      @media only screen and (min-width: 600px) and (max-width: 1000px) {
+        font-size: 62px;
+      }
 
-        @media only screen and (min-width : 1000px) and (max-width : 1200px) {
-          font-size: 72px;
-        }
+      @media only screen and (min-width: 1000px) and (max-width: 1200px) {
+        font-size: 72px;
+      }
 
-        @media only screen and (min-width : 1200px) {
-          font-size: 86px;
-        }
+      @media only screen and (min-width: 1200px) {
+        font-size: 86px;
       }
     }
+  }
 
-    .hero-content.municipal{
-      .tag-line{
-        font-size: 40px;
-        @media only screen and (min-width : 450px) and (max-width : 600px) {
-          font-size: 46px;
-        }
-        @media only screen and (min-width : 600px) and (max-width : 1000px) {
-          font-size: 62px;
-        }
+  .hero-content.felony {
+    .tag-line {
+      font-size: 40px;
+      @media only screen and (min-width: 450px) and (max-width: 600px) {
+        font-size: 46px;
+      }
+      @media only screen and (min-width: 600px) and (max-width: 1000px) {
+        font-size: 62px;
+      }
 
-        @media only screen and (min-width : 1000px) and (max-width : 1200px) {
-          font-size: 72px;
-        }
+      @media only screen and (min-width: 1000px) and (max-width: 1200px) {
+        font-size: 72px;
+      }
 
-        @media only screen and (min-width : 1200px) {
-          font-size: 86px;
-        }
+      @media only screen and (min-width: 1200px) {
+        font-size: 86px;
       }
     }
+  }
 
-    .hero-content.domestic{
-      .tag-line{
-        font-size: 40px;
-        @media only screen and (min-width : 450px) and (max-width : 600px) {
-          font-size: 46px;
-        }
-        @media only screen and (min-width : 600px) and (max-width : 1000px) {
-          font-size: 62px;
-        }
+  .hero-content.juvenile {
+    .tag-line {
+      font-size: 40px;
+      @media only screen and (min-width: 450px) and (max-width: 600px) {
+        font-size: 46px;
+      }
+      @media only screen and (min-width: 600px) and (max-width: 1000px) {
+        font-size: 62px;
+      }
 
-        @media only screen and (min-width : 1000px) and (max-width : 1200px) {
-          font-size: 72px;
-        }
+      @media only screen and (min-width: 1000px) and (max-width: 1200px) {
+        font-size: 72px;
+      }
 
-        @media only screen and (min-width : 1200px) {
-          font-size: 86px;
-        }
+      @media only screen and (min-width: 1200px) {
+        font-size: 86px;
+      }
+    }
+  }
+
+  .hero-content.municipal {
+    .tag-line {
+      font-size: 40px;
+      @media only screen and (min-width: 450px) and (max-width: 600px) {
+        font-size: 46px;
+      }
+      @media only screen and (min-width: 600px) and (max-width: 1000px) {
+        font-size: 62px;
+      }
+
+      @media only screen and (min-width: 1000px) and (max-width: 1200px) {
+        font-size: 72px;
+      }
+
+      @media only screen and (min-width: 1200px) {
+        font-size: 86px;
+      }
+    }
+  }
+
+  .hero-content.domestic {
+    .tag-line {
+      font-size: 40px;
+      @media only screen and (min-width: 450px) and (max-width: 600px) {
+        font-size: 46px;
+      }
+      @media only screen and (min-width: 600px) and (max-width: 1000px) {
+        font-size: 62px;
+      }
+
+      @media only screen and (min-width: 1000px) and (max-width: 1200px) {
+        font-size: 72px;
+      }
+
+      @media only screen and (min-width: 1200px) {
+        font-size: 86px;
       }
     }
   }
