--- a/src/styles/singlePage.scss
+++ b/src/styles/singlePage.scss
@@ -1,18 +1,20 @@
-.single-page-hero{
-  .hero-content{
-    h1.tag-line{
+@import "./variables.scss";
+
+.single-page-hero {
+  .hero-content {
+    h1.tag-line {
       color: #415169;
       font-size: 42px;
       padding-top: 20%;
-      @media only screen and (min-width : 600px) and (max-width : 800px) {
+      @media only screen and (min-width: 600px) and (max-width: 800px) {
         font-size: 60px;
         padding-top: 10%;
       }
-      @media only screen and (min-width : 800px) and (max-width : 1200px) {
+      @media only screen and (min-width: 800px) and (max-width: 1200px) {
         font-size: 72px;
         padding-top: 2%;
       }
-      @media only screen and (min-width : 1200px) {
+      @media only screen and (min-width: 1200px) {
         font-size: 86px;
         padding-top: 2%;
       }
@@ -20,37 +22,55 @@
   }
 }
 
-.single-page{
+.single-page {
+  padding-bottom: 90px;
 
-  .header{
+  @include mobile {
+    padding-top: 50px;
+  }
+
+
+  .single-page-content {
+    padding-right: 24px;
+    padding-left: 24px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  @media (min-width: 768px) {
+    .single-page-content {
+      width: 750px;
+    }
+  }
+  @media (min-width: 992px) {
+    .single-page-content {
+      width: 691px;
+    }
+  }
+  @media (min-width: 1200px) {
+    .single-page-content {
+      width: 691px;
+    }
+  }
+
+  .header {
     font-size: 30px;
     margin-top: 20px;
     margin-bottom: 1rem;
     color: #6fa2c8;
-    @media only screen and (min-width : 650px) {
+    @media only screen and (min-width: 650px) {
       font-size: 42px;
       margin-top: 107px;
     }
   }
 
-  .body{
+  .body {
     font-size: 18px;
     line-height: 24px;
 
-    p{
+    p {
       margin-bottom: 15px;
+      line-height: 28px;
     }
-  }
-  .content-footer{
-    margin-bottom: 50px;
-    width: 182px;
-    @media only screen and (min-width : 650px) {
-      margin-bottom: 107px;
-    }
-  }
-
-  a:hover{
-    text-decoration: none;
   }
 
 }
