--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -1,14 +1,17 @@
+@import "./variables.scss";
+
 .about{
-  text-align: left;
-  padding: 20px 0 40px;
+padding: 134px 0 134px;
 
-  @media only screen and (min-width : 990px) {
-     text-align: left;
+  @include mobile{
+    text-align: left;
+    padding: 50px 0 40px;
+  }
+  @include tablet{
+    text-align: left;
+    padding: 50px 0 40px;
   }
 
-  @media only screen and (min-width : 650px) {
-     padding: 134px 0 134px;
-  }
 
   .header-mobile{
     font-weight: 700;
@@ -16,14 +19,22 @@
     line-height: 42px;
     color: #6fa2c8;
     margin-bottom: 14px;
-    display: block;
+    display: none;
 
-    @media only screen and (min-width : 500px) {
-      font-size: 42px;
+
+    @include mobile {
+      font-size: 34px;
+      padding-bottom: 14px;
+      display: block;
     }
-    @media only screen and (min-width : 990px) {
-      display: none;
+    @include tablet {
+      font-size: 34px;
+      padding-bottom: 14px;
+      display: block;
     }
+
+
+
   }
 
   .content{
@@ -58,37 +69,37 @@
 
       .body{
         font-size: 18px;
-        text-align: center;
+        text-align: left;
         line-height: 24px;
-        @media only screen and (min-width : 990px) {
-          text-align: left;
-        }
+        // @media only screen and (min-width : 990px) {
+        //   text-align: left;
+        // }
       }
 
-      .content-footer.meet-patrick{
-        font-size: 18px;
-        text-align: center;
-        position: relative;
-
-        @media only screen and (min-width : 990px) {
-          text-align: left;
-        }
-
-        &::after{
-          width: 211px;
-          top: 25px;
-          left: 50%;
-          margin-left: -105px;
-
-          @media only screen and (min-width : 990px) {
-            left: 0;
-            margin-left: 0px;
-          }
-        }
-      }
-      a:hover{
-        text-decoration: none;
-      }
+      // .content-footer.meet-patrick{
+      //   font-size: 18px;
+      //   text-align: center;
+      //   position: relative;
+      //
+      //   @media only screen and (min-width : 990px) {
+      //     text-align: left;
+      //   }
+      //
+      //   &::after{
+      //     width: 211px;
+      //     top: 25px;
+      //     left: 50%;
+      //     margin-left: -105px;
+      //
+      //     @media only screen and (min-width : 990px) {
+      //       left: 0;
+      //       margin-left: 0px;
+      //     }
+      //   }
+      // }
+      // a:hover{
+      //   text-decoration: none;
+      // }
     }
 
     .about-image{
