--- a/src/styles/attorneyProfile.scss
+++ b/src/styles/attorneyProfile.scss
@@ -1,76 +1,76 @@
-.attorney-profile{
-  padding-top: 20px;
-  padding-bottom: 0px;
+@import "./variables.scss";
 
-  @media only screen and (min-width : 650px) {
-    padding-top: 120px;
-    padding-bottom: 120px;
+.attorney-profile {
+  padding-top: 120px;
+  padding-bottom: 120px;
+
+  @include mobile {
+    padding-top: 50px;
+    padding-bottom: 0px;
   }
 
-  .header{
-    font-size: 34px;
-    margin-bottom: 15px;
+  .header {
+    font-size: 42px;
+    margin-bottom: 50px;
     color: #6fa2c8;
 
-    @media only screen and (min-width : 500px) {
-      font-size: 42px;
-      margin-bottom: 50px;
+    @include mobile {
+      font-size: 34px;
+      margin-bottom: 15px;
     }
   }
 
-  .main-content{
+  .main-content {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    .image{
+    .image {
       min-height: 300px;
       min-width: 290px;
-      flex:1;
+      flex: 1;
 
-      picture{
-        img{
-            object-position: right center !important;
+      picture {
+        img {
+          object-position: right center !important;
         }
       }
 
-
-
-      @media only screen and (min-width : 760px) {
+      @media only screen and (min-width: 760px) {
         min-width: 450px;
         // max-height: 600px;
       }
     }
 
-    .about-patrick{
+    .about-patrick {
       background-color: white;
 
-      .title{
+      .title {
         font-size: 22px;
         line-height: 26px;
         margin-bottom: 15px;
-        @media only screen and (min-width : 500px) {
+        @media only screen and (min-width: 500px) {
           margin-bottom: 25px;
         }
       }
 
-      .body{
+      .body {
         font-size: 18px;
         line-height: 24px;
-        p{
+        p {
           margin-bottom: 1rem;
         }
       }
 
-      @media only screen and (min-width : 760px) {
+      @media only screen and (min-width: 760px) {
         min-width: 500px;
         text-align: left;
-        padding-right:42px;
+        padding-right: 42px;
         flex: 3;
       }
     }
   }
 
-  .wrap{
+  .wrap {
     grid-template-columns:
       1fr
       1fr;
@@ -83,79 +83,81 @@
     grid-auto-rows: minmax(10px, auto);
     grid-gap: 40px;
 
-    .chunk{
+    .chunk {
       font-size: 18px;
       margin-bottom: 25px;
       line-height: 24px;
 
-      &:last-child{
+      &:last-child {
         margin-bottom: 0;
       }
     }
 
-    p{
+    p {
       font-size: 18px;
       margin-bottom: 25px;
       line-height: 24px;
 
-      &:last-child{
+      &:last-child {
         margin-bottom: 0;
       }
     }
 
-    .bold{
+    .bold {
       font-weight: bold;
       display: inline;
     }
 
-    .box{
+    .box {
       padding: 40px 37px 37px 37px;
       background-color: #e9e9e9;
       font-size: 18px;
-      .title{
+
+      @include mobile{
+        padding: 32px 32px 32px 32px;
+      }
+      .title {
         font-size: 22px;
         margin-bottom: 18px;
         // margin-top: 49px;
       }
       margin-bottom: 20px;
-      &:first-child{
+      &:first-child {
         margin-top: 20px;
       }
-      @media only screen and (min-width : 600px) {
+      @media only screen and (min-width: 600px) {
         margin-bottom: 0;
-        &:first-child{
+        &:first-child {
           margin-top: 0;
         }
       }
     }
 
-
-
-    @media only screen and (min-width : 600px) {
+    @media only screen and (min-width: 600px) {
       display: grid;
     }
   }
 
-  .training{
+  .training {
     grid-area: training;
-    .bold{
+    .bold {
       display: block;
     }
   }
 
-  .education{
+  .education {
     grid-area: education;
   }
 
-  .honors{
+  .honors {
     grid-area: honors;
-    .chunk.bold{
+    .chunk.bold {
       display: block;
       margin-bottom: 25px;
     }
   }
 
-  .legal{
+  .legal {
     grid-area: legal;
   }
 }
