--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -1,149 +1,94 @@
-.contact{
+@import "./variables.scss";
+
+.contact {
   text-align: center;
   background-image: linear-gradient(to top, #7589a3, #415169);
-  padding: 20px 0 20px;
+  padding: 50px 0 20px;
 
-  @media only screen and (min-width : 600px) {
-     padding: 120px 0 120px;
+  @media only screen and (min-width: 600px) {
+    padding: 120px 0 120px;
   }
 
-  @media only screen and (min-width : 991px) {
-     text-align: left;
-     padding: 120px 0 120px;
+  @media only screen and (min-width: 991px) {
+    text-align: left;
+    padding: 120px 0 120px;
   }
 
-  .header{
-    font-size: 34px;
-    margin-bottom: 20px;
+  .header {
+    font-size: 42px;
+    margin-bottom: 35px;
+
     color: white;
 
-    @media only screen and (min-width : 500px) {
-      font-size: 42px;
-      margin-bottom: 35px;
+    @include mobile {
+      font-size: 34px;
+      margin-bottom: 20px;
     }
   }
 
-
-  // .marker{
-  //   background-color: red;
-  //   border: 2px solid black;
-  //   border-radius: 50%;
-  //   height: 15px;
-  //   width: 15px;
-  // }
-
-  .wrap{
+  .wrap {
     display: flex;
     flex-wrap: wrap;
-    .map{
+    .map {
       min-height: 290px;
       width: 100%;
       flex: 1;
       min-width: 290px;
-      @media only screen and (min-width : 650px) {
+      @media only screen and (min-width: 650px) {
         min-width: 320px;
       }
     }
-    .text{
+    .text {
       flex: 1;
       color: white;
       padding-right: 12px;
-      p{
+      p {
         font-size: 18px;
       }
       a {
         font-size: 18px;
       }
-      .title{
+      .title {
         font-size: 22px;
         line-height: 26px;
         margin-bottom: 20px;
 
-        @media only screen and (min-width : 500px) {
-            margin-bottom: 8px;
+        @media only screen and (min-width: 500px) {
+          margin-bottom: 8px;
         }
       }
-      .bold{
-        font-family: 'Work Sans', sans-serif;
+      .bold {
+        font-family: "Work Sans", sans-serif;
         font-weight: bold;
         font-size: 18px;
         line-height: 20px;
         font-style: normal;
         margin-bottom: 5px;
       }
-      address{
-
+      address {
       }
-      a.phone{
+      a.phone {
         margin: 10px 0;
         display: block;
         color: white;
-
       }
-      a.email{
+      a.email {
         color: white;
       }
 
-      .disclaimer{
+      .disclaimer {
         margin-top: 30px;
         font-size: 14px;
         margin: auto;
         margin: 40px auto;
-        @media only screen and (min-width : 991px) {
+        @media only screen and (min-width: 991px) {
           margin-left: 0;
         }
 
-        @media only screen and (min-width : 541px) {
+        @media only screen and (min-width: 541px) {
           width: 400px;
         }
       }
     }
   }
-
-
-
-  // .info{
-  //   margin-bottom: 1rem;
-  //   font-size: 22px;
-  //   font-family: 'Open Sans', sans-serif;
-  //   font-weight: bold;
-  //   color: #9fd9c5;
-  //   line-height: 26px;
-  //   max-width: 450px;
-  //   margin: auto;
-  //   margin-bottom: 42px;
-  // }
-  //
-  // .email{
-  //   text-decoration: none;
-  //   color: black;
-  //   font-family: 'Open Sans', sans-serif;
-  //   font-weight: bold;
-  //   font-size: 22px;
-  //   margin-bottom: 1rem;
-  //   font-size: 1.3rem;
-  //   color: #9fd9c5;
-  //   line-height: 26px;
-  //
-  //   // &::before{
-  //   //   content: 'Email: ';
-  //   //   font-weight: bold;
-  //   // }
-  //
-  // }
-  //
-  //
-  // .phone{
-  //   margin-bottom: 1rem;
-  //   font-size: 22px;
-  //   color: #9fd9c5;
-  //   font-family: 'Open Sans', sans-serif;
-  //   font-weight: bold;
-  //   line-height: 26px;
-  //   // &::before{
-  //   //   content: 'Phone: ';
-  //   //   font-weight: bold;
-  //   // }
-  // }
-
 }
