--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -12,10 +12,18 @@
     width: 100%;
     top: 16px;
 
+    @include mobile {
+      padding-left: 0;
+    }
+
     .brand {
       margin-bottom: 3px;
       font-size: 16px;
       color: $navy;
+
+      &:hover {
+        text-decoration: underline;
+      }
 
       @media only screen and (min-width: 400px) and (max-width: 450px) {
         font-size: 20px;
@@ -67,13 +75,20 @@
       border-radius: 0;
       padding: 0;
       position: absolute;
-      right: 25px;
+      right: 0px;
       top: 10px;
       border: 0px solid black;
       .navbar-toggler-icon {
         width: 32px;
         height: 32px;
         border: 0px;
+      }
+
+      @include mobile {
+        right: 35px;
+      }
+      @include tablet {
+        right: 35px;
       }
     }
 
@@ -92,14 +107,11 @@
         border-radius: 4px;
         .navbar-nav {
           a.nav-link {
-            @include mobile {
+            @include  variableBPDown(992px){
               display: block;
               padding: 10px 0 10px 20px;
-            }
-            @include tablet {
-              display: block;
-              padding: 10px 0 10px 20px;
-            }
+            };
+          
           }
         }
 
@@ -136,27 +148,32 @@
     margin-top: 10%;
     .tag-line {
       font-weight: bold;
-      font-size: 38px;
+      font-size: 86px;
+      margin-top: 15%;
+      margin-bottom: 10px;
       color: #415169;
-      margin-top: 20%;
 
       @media only screen and (min-width: 400px) and (max-width: 450px) {
         font-size: 50px;
         margin-top: 23%;
+        line-height: 55px;
       }
 
       @media only screen and (min-width: 450px) and (max-width: 600px) {
-        font-size: 54px;
+        font-size: 50px;
         margin-top: 23%;
+        line-height: 55px;
       }
 
       @media only screen and (min-width: 600px) and (max-width: 1000px) {
         font-size: 62px;
         margin-top: 23%;
+        line-height: 72px;
       }
 
       @media only screen and (min-width: 1000px) and (max-width: 1200px) {
         font-size: 72px;
+        line-height: 72px;
       }
 
       @media only screen and (min-width: 1200px) {
