--- a/src/styles/practiceAreas.scss
+++ b/src/styles/practiceAreas.scss
@@ -64,6 +64,7 @@
         min-width: 300px;
 
         @include mobile {
+          min-width: 100%;
           margin-bottom: 0;
         }
       }
