--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -21,56 +21,19 @@
 
     .brand {
       margin-bottom: 3px;
-      font-size: 16px;
+      font-size: 32px;
       color: $navy;
 
       &:hover {
         text-decoration: underline;
       }
 
-      @media only screen and (min-width: 400px) and (max-width: 450px) {
-        font-size: 20px;
-      }
-
-      @media only screen and (min-width: 450px) and (max-width: 600px) {
-        font-size: 24px;
-      }
-
-      @media only screen and (min-width: 600px) and (max-width: 1000px) {
-        font-size: 28px;
-      }
-
-      @media only screen and (min-width: 1000px) and (max-width: 1200px) {
-        font-size: 28px;
-      }
-
-      @media only screen and (min-width: 1200px) {
-        font-size: 32px;
-      }
-      a {
-        font-weight: bold;
+      @include mobile {
         font-size: 16px;
-        color: #415169;
+      }
 
-        @media only screen and (min-width: 400px) and (max-width: 450px) {
-          font-size: 20px;
-        }
-
-        @media only screen and (min-width: 450px) and (max-width: 600px) {
-          font-size: 24px;
-        }
-
-        @media only screen and (min-width: 600px) and (max-width: 1000px) {
-          font-size: 28px;
-        }
-
-        @media only screen and (min-width: 1000px) and (max-width: 1200px) {
-          font-size: 28px;
-        }
-
-        @media only screen and (min-width: 1200px) {
-          font-size: 32px;
-        }
+      @include tablet {
+        font-size: 28px;
       }
     }
 
@@ -138,8 +101,6 @@
     }
   }
 }
-
-
 
 .hero {
   width: 100%;
