--- a/src/styles/attorneyProfile.scss
+++ b/src/styles/attorneyProfile.scss
@@ -16,7 +16,8 @@
 
     @include mobile {
       font-size: 34px;
-      margin-bottom: 15px;
+      margin-bottom: 0px;
+      padding-bottom: 0;
     }
   }
 
