--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -119,6 +119,7 @@
   background-position: center center;
   background-repeat: none;
   background-size: cover;
+  max-height: 100vh;
 
   .hero-content {
     text-align: center;
